# tinycthread

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.txt  mkbuild.sh
doc/: Doxyfile
source/: tinycthread.c  tinycthread.h
test/: Makefile  Makefile.msvc  check.sh  hello.c  test.c
